<resources>
    <string name="app_name">Trusted Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="view_review">View Review</string>
    <string name="logo">logo</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR Code</string>
    <string name="step_1">Step 1of4:</string>
    <string name="your_items_header">Your Items</string>
    <string name="comments_header"> Comments </string>
    <string name="ratings_header">Ratings </string>
    <string name="txtView_item1">TextView</string>
    <string name="ItemTxtView2">TextView</string>
    <string name="please_type_an_item">please type an item</string>
    <string name="item_1">Item:</string>
    <string name="item_2">Item:</string>
    <string name="item_3">Item:</string>
    <string name="item_4">Item:</string>

</resources>