<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#70afbf"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/trusted_logo" />

    <Button
        android:id="@+id/writeReviewBtn"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#606060"
        android:text="@string/write_review"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/viewReviewBtn"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/writeReviewBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="#606060"
        android:text="@string/view_review"
        android:textColor="#ffffff"
        />

</RelativeLayout>